--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   </context-param>
 
   <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <listener-class>jp.gmor.research.ad.listener.MyContextLoaderListener</listener-class>
   </listener>
 
   <filter>
