--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,7 @@
       <version>3.0.1</version>
       <scope>provided</scope>
     </dependency>
-<!-- 
-    <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>javax.el-api</artifactId>
-      <version>2.2.5</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.2</version>
-      <scope>provided</scope>
-    </dependency>
- -->
+    <!-- <dependency> <groupId>javax.el</groupId> <artifactId>javax.el-api</artifactId> <version>2.2.5</version> </dependency> <dependency> <groupId>javax.servlet.jsp</groupId> <artifactId>jsp-api</artifactId> <version>2.2</version> <scope>provided</scope> </dependency> -->
     <dependency>
       <groupId>is.tagomor.woothee</groupId>
       <artifactId>woothee-java</artifactId>
@@ -84,6 +72,11 @@
     </dependency>
 
     <!-- Test Artifacts -->
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>1.13</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -220,6 +213,15 @@
             <format>html</format>
             <format>xml</format>
           </formats>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <locales>ja</locales>
         </configuration>
       </plugin>
     </plugins>
